# pesto

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  main.cpp  pesto.sln  pesto.vcxproj  vcpkg.json
src/: heif.cpp  main.cpp  pesto.hpp
